adding css layouts and search functions

--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -3,8 +3,9 @@
     height: 90px;
     width: 100%;
     padding: 0 16px;
-    position: fixed;
-    bottom: 0;
+    // position: fixed;
+    // bottom: 0;
+    grid-area: now-playing-bar;
     display: flex;
 
     .iframe-container {
