--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -4,8 +4,8 @@
     height: 90px;
     width: 100%;
     padding: 16px;
-    position: fixed;
-    bottom: 0;
+    // position: fixed;
+    // bottom: 0;
     grid-area: now-playing-bar;
     display: flex;
 
