--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,8 +1,7 @@
-
-
 // BASE
 @import 'mixins/mixins';
 @import 'base/helpers';
+@import 'base/vars';
 @import 'base/basic';
 @import 'mixins/mixins';
 
@@ -10,6 +9,7 @@
 @import 'cmps/music-player';
 @import 'cmps/app-navbar';
 @import 'cmps/app-header';
+@import 'cmps/login-page';
 
 // PAGES
 @import 'pages/main-app';
