--- a/src/assets/styles/base/_vars.scss
+++ b/src/assets/styles/base/_vars.scss
@@ -1,5 +1,5 @@
 :root {
     --text-subdued: #a7a7a7;
     --background-dark: #181818;
-    --backfround-darker: #101010;
+    --background-darker: #101010;
 }
