--- a/src/assets/styles/cmps/_login-page.scss
+++ b/src/assets/styles/cmps/_login-page.scss
@@ -11,8 +11,43 @@
     z-index: 35;
 
     .login-modal {
-        height: 600px;
-        width: 400px;
+        padding: 0 60px;
+        box-sizing: border-box;
+        border-radius: 3px;
+        height: 100%;
+        width: 496px;
         background-color: var(--background-darker);
+
+        .login-page-heading {
+            color: white;
+            font-size: 48px;
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+
+            input {
+                height: 32px;
+                background-color: #535353;
+                color: white;
+                border: none;
+
+                &:focus {
+                    outline: none;
+                    background-color: lighten(#535353, 5%)
+                }
+            }
+
+            .sign-up-btn {
+                @include green-pill-btn;
+                padding: 16px 48px;
+                font-size: 16px;
+                font-weight: bold;
+            }
+        }
+
     }
+
 }
