--- a/src/assets/styles/cmps/_login-page.scss
+++ b/src/assets/styles/cmps/_login-page.scss
@@ -20,7 +20,7 @@
 
         .login-page-heading {
             color: white;
-            font-size: 48px;
+            font-size: 34px;
         }
 
         form {
@@ -32,7 +32,9 @@
                 height: 32px;
                 background-color: #535353;
                 color: white;
+                padding: 0px 12px;
                 border: none;
+                font-size: 18px;
 
                 &:focus {
                     outline: none;
@@ -45,6 +47,12 @@
                 padding: 16px 48px;
                 font-size: 16px;
                 font-weight: bold;
+                cursor: pointer;
+
+                &:disabled {
+                    opacity: 0.85;
+                    cursor: not-allowed;
+                }
             }
         }
 
