improving search css and start working on details

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,5 +15,5 @@
 
 // PAGES
 @import 'pages/main-app';
-@import 'pages/search';
+@import 'pages/search-results';
 @import 'pages/playlist-details';
