--- a/src/assets/styles/base/_basic.scss
+++ b/src/assets/styles/base/_basic.scss
@@ -1,3 +1,7 @@
+*{
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -18,6 +22,10 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+}
+
+h1{
+    margin: 0;
 }
 
 img{
