--- a/src/assets/styles/cmps/_playlist-preview.scss
+++ b/src/assets/styles/cmps/_playlist-preview.scss
@@ -51,12 +51,9 @@
             -webkit-box-align: center;
             -webkit-box-flex: 1;
             -webkit-box-pack: justify;
-            align-items: center;
             color: #fff;
             display: -webkit-box;
-            display: flex;
             flex: 1;
-            justify-content: space-between;
             padding: 0 16px;
             // gap: 40px;
             &.title{
@@ -79,31 +76,8 @@
                 z-index: 2;
 
                 button {
-                    box-sizing: border-box;
-                    font-size: 3rem;
-                    background-color: transparent;
-                    border: 0px;
-                    border-radius: 500px;
-                    display: inline-block;
-                    position: relative;
-                    text-align: center;
-                    text-decoration: none;
-                    text-transform: none;
-                    transition-duration: 33ms;
-                    transition-property: background-color, border-color, color, box-shadow, filter, transform;
-                    vertical-align: middle;
-                    transform: translate3d(0px, 0px, 0px);
-                    padding: 0px;
-                    min-inline-size: 0px;
-                    align-self: center;
-
-                    span {
-                        display: flex;
-                        background-color: #0c0b0b;
-                        color: #1ed760;
-                        border-radius: 55%;
-                        box-shadow: 0px 3px 5px 0px #000000;
-                    }
+                    @include green-play-btn
+                   
                 }
             }
         }
