--- a/src/assets/styles/mixins/_mixins.scss
+++ b/src/assets/styles/mixins/_mixins.scss
@@ -32,3 +32,32 @@
     border-radius: 50%;
     border: none;
 }
+
+@mixin green-play-btn {
+    font-size: 3rem;
+    background-color: transparent;
+    border: 0px;
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    text-transform: none;
+    transition-duration: 33ms;
+    transition-property: background-color, border-color, color, box-shadow, filter, transform;
+    vertical-align: middle;
+    transform: translate3d(0px, 0px, 0px);
+    padding: 0px;
+    min-inline-size: 0px;
+    align-self: center;
+
+    span {
+        display: flex;
+        background-color: #0c0b0b;
+        color: #1ed760;
+        border-radius: 55%;
+        box-shadow: 0px 3px 5px 0px #000000;
+        &:hover{
+            font-size: 3.1rem;
+        }
+    }
+}
