--- a/src/assets/styles/mixins/_mixins.scss
+++ b/src/assets/styles/mixins/_mixins.scss
@@ -54,7 +54,7 @@
         border-radius: 55%;
         box-shadow: 0px 3px 5px 0px #000000;
         &:hover{
-            font-size: 3.1rem;
+            box-shadow: 0px 3px 5px 0px #000000;
         }
     }
 }
