--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -1,19 +1,72 @@
-.playlist-details{
-   .playlist-details-header{
-    height: 30vh;
-    max-height: 500px;
-    min-height: 340px;
-    gap: 20px;
-    .img-container{
-        align-self: flex-end;
-        height: 192px;
-        margin-inline-end: 24px;
-        min-width: 192px;
-        width: 192px;
-        img{
-            height: 100%;
-            object-fit: contain;
+.playlist-details {
+    color: #fff;
+
+    .playlist-details-header {
+        height: 30vh;
+        max-height: 500px;
+        min-height: 300px;
+        gap: 20px;
+        margin: 0 -17px 0 -19px;
+        padding: 0 0 32px 32px;
+        background-color: var(--background-dark);
+        align-items: end;
+        margin-bottom: 32px;
+
+        .img-container {
+            align-self: flex-end;
+            height: 232px;
+            margin-inline-end: 24px;
+            width: 232px;
+            box-shadow: 0 0 15px 4px black;
+
+            img {
+                object-fit: cover;
+                height: 100%;
+            }
+        }
+
+        .playlist-description {
+            gap: 15px;
+
+            h1 {
+                font-size: 5rem;
+            }
         }
     }
-   }
+
+    .playlist-details-main {
+
+        &.action-btns {
+            gap: 20px;
+            margin-bottom: 20px;
+
+            .play-btn {
+                @include green-play-btn
+            }
+
+            .menu-btn {
+                @include cleared-btn;
+
+                span {
+                    font-size: 1.2rem;
+                }
+            }
+        }
+
+        .playlist-details-main-content {
+            .songs-titles-container {
+                position: sticky;
+
+                .songs-titles {
+                    display: grid;
+                    // grid-template-columns: [index] 16px [first] 6fr [var1] 4fr [var2] 3fr [last] minmax(120px,1fr);
+                    grid-template-columns: [index] 16px [first] 6fr [var2] 3fr [last] minmax(120px, 1fr);
+                    border-bottom: 1px solid hsla(0, 0%, 100%, .1);
+                    color: #b3b3b3;
+                    height: 36px;
+                    grid-gap: 16px;
+                }
+            }
+        }
+    }
 }
