--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -12,6 +12,7 @@
 @import 'cmps/playlist-list';
 @import 'cmps/playlist-preview';
 @import 'cmps/login-page';
+@import 'cmps/queue-list';
 
 // PAGES
 @import 'pages/main-app';
