--- a/src/assets/styles/cmps/_playlist-preview.scss
+++ b/src/assets/styles/cmps/_playlist-preview.scss
@@ -35,6 +35,7 @@
             // width: 100%;
             width: 80px;
             height: 80px;
+            min-width: 70px;
 
             img {
                 display: block;
