--- a/src/assets/styles/cmps/_playlist-preview.scss
+++ b/src/assets/styles/cmps/_playlist-preview.scss
@@ -29,13 +29,11 @@
             box-shadow: 0 8px 24px rgb(0 0 0 / 50%);
             display: -webkit-box;
             display: flex;
-            // height: 100%;
             justify-content: center;
             position: relative;
-            // width: 100%;
             width: 80px;
             height: 80px;
-            min-width: 70px;
+            min-width: 80px;
 
             img {
                 display: block;
@@ -56,11 +54,12 @@
             display: -webkit-box;
             flex: 1;
             padding: 0 16px;
-            // gap: 40px;
-            &.title{
-                a{
+
+            &.title {
+                a {
                     color: #fff;
-                    &:hover{
+
+                    &:hover {
                         text-decoration: underline;
                     }
                 }
@@ -69,16 +68,15 @@
             &.icon-container {
                 margin-left: 8px;
                 border-radius: 500px;
-                // box-shadow: 0 8px 8px rgb(0 0 0 / 30%);
                 display: flex;
                 opacity: 0;
-                position: relative;
+                position: absolute;
+                right: 10px;
                 transition: all .3s ease;
                 z-index: 2;
 
                 button {
                     @include green-play-btn
-                   
                 }
             }
         }
