--- a/src/assets/styles/mixins/_mixins.scss
+++ b/src/assets/styles/mixins/_mixins.scss
@@ -83,8 +83,10 @@
         color: #1ed760;
         border-radius: 55%;
         box-shadow: 0px 3px 5px 0px #000000;
+        cursor: pointer;
         &:hover{
-            box-shadow: 0px 3px 5px 0px #000000;
+            color: #138039;
+            transition: all .3s;
         }
     }
 }
