--- a/src/assets/styles/pages/_search-results.scss
+++ b/src/assets/styles/pages/_search-results.scss
@@ -88,6 +88,9 @@
                         &:hover .song-actions button {
                             opacity: 1;
                         }
+                        // &:hover .top-song .img-container{
+                        //     background-color: rgba(0, 0, 0, 0.55);
+                        // }
 
                         &:hover {
                             background-color: hsla(0, 0%, 100%, .1);
@@ -100,6 +103,15 @@
                                 height: 40px;
                                 width: 40px;
                                 margin-inline-end: 10px;
+                                position: relative;
+
+                                .photo-play {
+                                    position: absolute;
+                                    bottom: 50%;
+                                    left: 50%;
+                                    transform: translate(-50%, 37%);
+                                    opacity: 0;
+                                }
                             }
 
                             .song-description {
