one modal to rule them all

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import 'cmps/playlist-preview';
 @import 'cmps/login-page';
 @import 'cmps/queue-list';
+@import 'cmps/actions-modal';
 
 // PAGES
 @import 'pages/main-app';
