--- a/src/assets/styles/pages/_search-results.scss
+++ b/src/assets/styles/pages/_search-results.scss
@@ -88,9 +88,10 @@
                         &:hover .song-actions button {
                             opacity: 1;
                         }
-                        // &:hover .top-song .img-container{
-                        //     background-color: rgba(0, 0, 0, 0.55);
-                        // }
+
+                        &:hover .top-song .img-container .photo-play{
+                            opacity: 1;
+                        }
 
                         &:hover {
                             background-color: hsla(0, 0%, 100%, .1);
@@ -105,12 +106,24 @@
                                 margin-inline-end: 10px;
                                 position: relative;
 
+                                img {
+                                    height: 100%;
+                                }
+
                                 .photo-play {
+                                    @include cleared-btn;
+                                    cursor: pointer;
                                     position: absolute;
-                                    bottom: 50%;
-                                    left: 50%;
-                                    transform: translate(-50%, 37%);
+                                    bottom: 0;
+                                    left: 0;
+                                    height: 100%;
+                                    width: 100%;
+                                    background-color: #000000a1;
                                     opacity: 0;
+                                    span {
+                                        font-size: 1.2rem;
+                                        color: #fff;
+                                    }
                                 }
                             }
 
