--- a/src/assets/styles/base/_helpers.scss
+++ b/src/assets/styles/base/_helpers.scss
@@ -1,4 +1,3 @@
-
 .flex {
 
     display: flex;
@@ -22,4 +21,8 @@
     &.align-center {
         align-items: center;
     }
+}
+
+.playing {
+    color: var(--green-color1);
 }
