--- a/src/assets/styles/base/_vars.scss
+++ b/src/assets/styles/base/_vars.scss
@@ -2,6 +2,7 @@
     --text-subdued: #a7a7a7;
     --background-dark: #181818;
     --background-darker: #101010;
+    --green-color1:#1ed760;
     --grid-gap: 24px;
     --grid-count: 4;
     --column-count:4;
