--- a/src/assets/styles/cmps/_queue-list.scss
+++ b/src/assets/styles/cmps/_queue-list.scss
@@ -68,6 +68,12 @@
             .index-display {
                 margin-right: 16px;
 
+                .volume-gif {
+                    width: 14px;
+                    height: 14px;
+                    margin-inline-end: -4px
+                }
+
                 p {
                     margin: 0;
                     font-size: 20px;
@@ -106,6 +112,9 @@
                         margin: 0 0 8px 0;
                         font-size: 16px;
                         font-weight: 100;
+                        &.playing{
+                            color: var(--green-color1)
+                        }
                     }
                 }
 
@@ -137,7 +146,7 @@
                 opacity: 0;
             }
 
-            
+
         }
     }
 }
