--- a/src/assets/styles/mixins/_mixins.scss
+++ b/src/assets/styles/mixins/_mixins.scss
@@ -80,7 +80,7 @@
     span {
         display: flex;
         background-color: #0c0b0b;
-        color: #1ed760;
+        color: var(--green-color1);
         border-radius: 55%;
         box-shadow: 0px 3px 5px 0px #000000;
         cursor: pointer;
