--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -1,5 +1,6 @@
 .playlist-details {
     color: #fff;
+    position: relative;
 
     .playlist-details-header {
         height: 30vh;
@@ -38,18 +39,19 @@
                 width: 100%;
                 opacity: 0;
                 background-color: #0a0a0a8c;
-                
+
                 label {
                     height: 100%;
                     width: 100%;
                     position: relative;
-                    
+
                     .photo-label {
+                        justify-content: center;
                         cursor: pointer;
                         height: 100%;
                         width: 100%;
                         position: relative;
-                        top: 28%;
+                        top: 0;
 
                         span {
                             font-size: 4rem;
@@ -80,6 +82,7 @@
         &.action-btns {
             gap: 20px;
             margin-bottom: 20px;
+            position: relative;
 
             .play-btn {
                 @include green-play-btn
@@ -97,16 +100,163 @@
         .playlist-details-main-content {
             .songs-titles-container {
                 position: sticky;
+                border-bottom: 1px solid hsla(0deg, 0%, 100%, 0.1);
+                margin-bottom: 10px;
 
                 .songs-titles {
                     display: grid;
-                    // grid-template-columns: [index] 16px [first] 6fr [var1] 4fr [var2] 3fr [last] minmax(120px,1fr);
-                    grid-template-columns: [index] 16px [first] 6fr [var2] 3fr [last] minmax(120px, 1fr);
-                    border-bottom: 1px solid hsla(0, 0%, 100%, .1);
+                    margin-inline-start: 20px;
+                    grid-template-columns: 16px 6fr 3fr minmax(120px, 1fr);
                     color: #b3b3b3;
                     height: 36px;
                     grid-gap: 16px;
                 }
+            }
+
+            .songs-container {
+
+
+
+                .top-songs-results {
+                    // display: grid;
+                    // grid-template-columns:  16px  6fr  3fr  minmax(120px, 1fr);
+                    // gap: 16px;
+                    border: 1px solid transparent;
+                    border-radius: 4px;
+                    height: 56px;
+                    position: relative;
+                    padding: 0 16px;
+
+                    &.modal-open {
+                        background-color: hsla(0, 0%, 100%, .3);
+                    }
+
+
+                    &:hover {
+                        background-color: hsla(0, 0%, 100%, .1);
+
+                        &.modal-open {
+                            background-color: hsla(0, 0%, 100%, .3);
+                        }
+
+                        .song-actions {
+
+                            p {
+                                color: white;
+                            }
+
+                            .actions-btn {
+                                opacity: 1;
+                            }
+                        }
+
+                        .top-song {
+                            .index-display {
+                                p {
+                                    display: none;
+                                }
+
+                                .play-pause-btn {
+                                    display: initial;
+                                }
+
+                            }
+
+                            .song-description {
+                                h6 {
+                                    color: white;
+                                }
+                            }
+                        }
+                    }
+
+                    .top-song {
+                        .index-display {
+                            margin-right: 16px;
+
+                            .volume-gif {
+                                width: 14px;
+                                height: 14px;
+                                margin-inline-end: -4px
+                            }
+
+                            p {
+                                margin: 0;
+                                font-size: 20px;
+                                color: #A7A7A7;
+                            }
+
+                            .play-pause-btn {
+                                @include play-pause;
+                                color: white;
+                                background: none;
+                                display: none;
+                                padding: 0;
+                                width: 10px;
+                                position: relative;
+                                right: 11px;
+                            }
+
+                        }
+
+                        .img-container {
+                            width: 40px;
+                            height: 40px;
+                            margin-right: 16px;
+
+                            img {
+                                width: 100%;
+                                height: 100%;
+                                object-fit: cover;
+                            }
+                        }
+
+                        .song-description {
+                            .song-title {
+                                h5 {
+                                    color: white;
+                                    margin: 0 0 8px 0;
+                                    font-size: 16px;
+                                    font-weight: 100;
+
+                                    &.playing {
+                                        color: var(--green-color1);
+                                    }
+                                }
+                            }
+
+                            h6 {
+                                color: #A7A7A7;
+
+                                font-size: 14px;
+                                font-weight: 100;
+                                margin: 0;
+                            }
+                        }
+
+
+                    }
+
+                    .song-actions {
+                        gap: 12px;
+                        position: relative;
+
+                        p {
+                            color: #A7A7A7;
+                        }
+
+                        .actions-btn {
+                            padding: 0;
+                            @include cleared-btn;
+                            font-size: 21px;
+                            line-height: 17px;
+                            opacity: 0;
+                        }
+
+
+                    }
+                }
+
             }
         }
     }
