--- a/src/assets/styles/base/_basic.scss
+++ b/src/assets/styles/base/_basic.scss
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html{
+    height: 100%;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -16,12 +20,14 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 .root-app{
     flex: 1;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 h1{
