--- a/src/assets/styles/base/_basic.scss
+++ b/src/assets/styles/base/_basic.scss
@@ -1,8 +1,9 @@
-*{
+* {
+    font-family: curly;
     box-sizing: border-box;
 }
 
-html{
+html {
     height: 100%;
 }
 
@@ -16,33 +17,33 @@ body {
     flex-direction: column;
 }
 
-#root{
+#root {
     flex: 1;
     display: flex;
     flex-direction: column;
     height: 100%;
 }
 
-.root-app{
+.root-app {
     flex: 1;
     display: flex;
     flex-direction: column;
     height: 100%;
 }
 
-h1{
+h1 {
     margin: 0;
 }
 
-img{
+img {
     width: 100%;
-    
+
 }
 
-li{
+li {
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
