--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -15,6 +15,7 @@
 @import 'cmps/login-page';
 @import 'cmps/queue-list';
 @import 'cmps/actions-modal';
+@import 'cmps/like-button';
 
 // PAGES
 @import 'pages/main-app';
