--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -182,6 +182,8 @@
                     }
 
                     .top-song {
+                        flex: 1;
+
                         .index-display {
                             margin-right: 16px;
 
@@ -249,6 +251,7 @@
                     }
 
                     .song-actions {
+                        min-width: 76px;
                         gap: 12px;
                         position: relative;
 
