--- a/src/assets/styles/base/_basic.scss
+++ b/src/assets/styles/base/_basic.scss
@@ -5,6 +5,30 @@
 
 html {
     height: 100%;
+
+    ::-webkit-scrollbar {
+        width: 10px;
+        height: 200px;
+        // margin-inline-end: 5px;
+    }
+
+    /* Track */
+    //   ::-webkit-scrollbar-track {
+    //     box-shadow: inset 0 0 5px grey;
+    //   }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        height: 50px;
+        background-color: #5e5c5c8c;
+        transition:  .3s;
+        &:hover {
+            background-color: #5e5c5cd2;
+            transition:  1s;
+                     
+        }
+
+    }
 }
 
 body {
