--- a/src/assets/styles/base/_typography.scss
+++ b/src/assets/styles/base/_typography.scss
@@ -2,3 +2,7 @@
     font-family: curly;
     src: url(../../fonts/Circular/CircularStd-Light.otf);
 }
+@font-face {
+    font-family: curlyBold;
+    src: url(../../fonts/Circular/CircularStd-Bold.otf);
+}
