--- a/src/assets/styles/cmps/_music-player.scss
+++ b/src/assets/styles/cmps/_music-player.scss
@@ -7,7 +7,7 @@
     padding: 16px;
     grid-area: now-playing-bar;
     display: flex;
-
+    z-index: 100;
 
     .left-section {
         width: 30%;
@@ -54,6 +54,16 @@
                 font-size: 28px;
 
 
+            }
+
+            button.shuffle-btn {
+                font-size: 25px;
+
+                svg {
+                    position: relative;
+                    top: 2px;
+                    left: 3px;
+                }
             }
 
             .play-pause-btn {
