--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -11,13 +11,12 @@
     margin: 0;
     outline: none;
     overflow-x: inherit;
-    // padding: 0;
 
     .playlist-details-header {
         height: 30vh;
         max-height: 500px;
         min-height: 300px;
-        gap: 20px;
+        gap: 10px;
         margin: 0 -17px 0 -19px;
         padding: 0 0 32px 32px;
         background-color: var(--background-dark);
@@ -27,7 +26,7 @@
         .img-container {
             align-self: flex-end;
             height: 232px;
-            margin-inline-end: 24px;
+            margin-inline-end: 12px;
             min-width: 232px;
             box-shadow: 0 0 15px 4px black;
             position: relative;
@@ -89,6 +88,7 @@
     }
 
     .playlist-details-main {
+        margin-left: 20px;
 
         &.action-btns {
             gap: 20px;
