--- a/src/assets/styles/cmps/app-header.scss
+++ b/src/assets/styles/cmps/app-header.scss
@@ -68,7 +68,7 @@
                     pointer-events: none;
                     position: absolute;
                     right: 12px;
-                    top: 0;
+                    top: 7px;
                     font-size: 1.7em;
 
 
