--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -16,6 +16,8 @@
 @import 'cmps/queue-list';
 @import 'cmps/actions-modal';
 @import 'cmps/like-button';
+@import 'cmps/playlist-details-header';
+@import 'cmps/playlist-details-search';
 
 // PAGES
 @import 'pages/main-app';
