--- a/src/assets/styles/cmps/_like-button.scss
+++ b/src/assets/styles/cmps/_like-button.scss
@@ -10,6 +10,11 @@
         place-content: center;
         cursor: pointer;
         top: -2px;
+        opacity: 0;
+
+        &:hover {
+            opacity: 1;
+        }
 
         #center-heart {
             #inner {
@@ -30,6 +35,7 @@
         }
 
         &.liked {
+            opacity: 1;
 
             &::before,
             &::after {
