--- a/src/assets/styles/pages/_main-app.scss
+++ b/src/assets/styles/pages/_main-app.scss
@@ -1,11 +1,23 @@
 .main-app {
     display: grid;
     grid-template-areas:
-        "top-bar top-bar"
-        "nav-bar main-view"
-        "now-playing-bar now-playing-bar";
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto 1fr auto;
+        "top-bar "
+        "main-view "
+        "now-playing-bar"
+        "nav-bar ";
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto auto;
+
+    @media(min-width:770px) {
+
+        grid-template-areas:
+            "top-bar top-bar"
+            "nav-bar main-view"
+            "now-playing-bar now-playing-bar";
+        grid-template-columns: auto 1fr;
+        grid-template-rows: auto 1fr auto;
+    }
+
     height: 100%;
     min-height: 100%;
     position: relative;
@@ -17,12 +29,11 @@
         background-color: #121212;
         grid-area: main-view;
         padding-left: 20px;
-        // padding-left: 20px;
-        // padding-right: 20px;
+
         min-height: 0;
         overflow: hidden;
         position: relative;
-        
+
         .main-content {
             padding-top: 60px;
             bottom: 0;
@@ -31,7 +42,6 @@
             left: 0;
             margin: 0;
             overflow: visible;
-            // padding: 0;
             position: absolute;
             right: 0;
             top: 0;
