--- a/src/assets/styles/cmps/_queue-list.scss
+++ b/src/assets/styles/cmps/_queue-list.scss
@@ -50,6 +50,8 @@
 
 
                 .index-display {
+
+
                     p {
                         display: none;
                     }
@@ -73,6 +75,7 @@
 
             .index-display {
                 margin-right: 16px;
+                width: 14px;
 
                 .volume-gif {
                     width: 14px;
