--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,6 +8,7 @@
 
 // CMPS
 @import 'cmps/music-player';
+@import 'cmps/music-player-mobile';
 @import 'cmps/app-navbar';
 @import 'cmps/app-header';
 @import 'cmps/playlist-list';
