--- a/src/assets/styles/pages/_playlist-details.scss
+++ b/src/assets/styles/pages/_playlist-details.scss
@@ -163,6 +163,7 @@
                         .top-song {
 
                             .index-display {
+                                width: 14px;
                                 p {
                                     display: none;
                                 }
