--- a/src/assets/styles/base/_helpers.scss
+++ b/src/assets/styles/base/_helpers.scss
@@ -26,3 +26,12 @@
 .playing {
     color: var(--green-color1);
 }
+
+.pusher {
+    height: 250px;
+
+    @media(min-width:770px) {
+        height: 0;
+    }
+
+}
